--- a/webpage/style.css
+++ b/webpage/style.css
@@ -17,7 +17,7 @@ p.discription {
 p.iframe {
     margin-right: 5%;
     margin-left: 55%;
-    margin-top: 15%;
+    margin-top: 12%;
     font-size: 50px;
 }
 p {
@@ -109,5 +109,10 @@ nav a:hover
 }
 
 #graph {
-    margin-bottom: -30%
+    /* margin-bottom: -30%; */
+    margin-top: 5%
+    
+}
+.frame {
+    margin-top: 10%
 }
